# DiscoveryOSPRO

./: .env.example  .gitignore  Dockerfile  README.md  hackathon_fixes.patch  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  reset_demo.py  start.sh  tailwind.config.js  test_document.txt  tsconfig.json  vercel.json  vite.config.ts
backend/: celery_app.py  config.py  database.py  dependencies.py  main.py  requirements.txt  seed_graph_data.py  supervisord.conf  test_api_integration.py  test_copilot_queries.py
backend/agents/: evidence_synthesis_agent.py
backend/middleware/: error_handler.py  logging.py
backend/models/: __init__.py  base.py  claim.py  discovery.py  document.py  evidence.py  goal.py  knowledge_state.py  relationship.py  user.py  workspace.py
backend/routes/: auth.py  claims.py  copilot.py  discoveries.py  documents.py  evidence.py  graph.py  workspaces.py
backend/schemas/: claim.py  claim_schema.py  evidence.py  goal.py
backend/services/: claim_service.py  discovery_engine.py  document_processor.py  graph_rag_service.py  graph_service.py  knowledge_state_service.py
backend/tasks/: agent_tasks.py
src/: App.tsx  index.css
src/api/: client.ts  hooks.ts  queries.ts
src/hooks/: useClaimDetail.ts  useDebounce.ts  useEvidenceSync.ts  useLocalStorage.ts  useWebSocket.ts
src/pages/: ClaimsPage.tsx  DashboardPage.tsx  DiscoveriesPage.tsx  IngestionPage.tsx  KnowledgeGraphPage.tsx  LoginPage.tsx  WorkspacesPage.tsx
src/store/: auth.ts  realtime.ts  ui.ts  workspace.ts
src/types/: evidence.ts  index.ts
(+19 files in other folders)
