[tool.poetry]
name = "discoveryos-backend"
version = "0.1.0"
description = "DiscoveryOS - Autonomous product reasoning system"
authors = ["Team <team@discoveryos.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.0"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
anthropic = "^0.7.0"
redis = "^5.0.0"
celery = "^5.3.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
boto3 = "^1.34.0"
pgvector = "^0.2.0"
alembic = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"